rhai/codegen/ui_tests/rhai_fn_junk_arg.stderr
error: expecting identifier
  --> $DIR/rhai_fn_junk_arg.rs:11:11
   |
11 | #[rhai_fn("wheeeee")]
   |           ^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_junk_arg.rs:22:8
   |
22 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
